tests/expectations/compiler/const_generics/unresolved_struct_type_fail.out
Error [ECMP0376012]: Unable to resolve composite expression `b28668.aleo/Foo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:10:22
     |
  10 |             z: Foo::[self.caller] {
     |                      ^^^^^^^^^^^
Error [ECMP0376012]: Unable to resolve composite expression `b28668.aleo/Goo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:9:33
     |
   9 |         let g: Goo::[y] = Goo::[y] {
     |                                 ^
Error [ECMP0376012]: Unable to resolve composite type `b28668.aleo/Foo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:4:14
     |
   4 |     z: Foo::[self.caller],
     |              ^^^^^^^^^^^
Error [ECMP0376012]: Unable to resolve composite type `b28668.aleo/Goo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:9:22
     |
   9 |         let g: Goo::[y] = Goo::[y] {
     |                      ^
